--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -1,7 +1,12 @@
 ja:
   activerecord:
     attributes:
-      user:
+      menber:
+        name: 名前
+        telephone_number: 電話番号
+        postal_code: 郵便番号
+        address: 住所
+        agreement: チェックマーク
         confirmation_sent_at: パスワード確認送信時刻
         confirmation_token: パスワード確認用トークン
         confirmed_at: パスワード確認時刻
@@ -26,7 +31,7 @@ ja:
         unlock_token: ロック解除用トークン
         updated_at: 更新日
     models:
-      user: ユーザー
+      menber: 会員
   devise:
     confirmations:
       confirmed: メールアドレスが確認できました。
@@ -134,10 +139,12 @@ ja:
   errors:
     messages:
       already_confirmed: は既に登録済みです。ログインしてください。
+      blank: が記入できてません。
+      accepted: が記入できてません。
       confirmation_period_expired: の期限が切れました。%{period} までに確認する必要があります。 新しくリクエストしてください。
       expired: の有効期限が切れました。新しくリクエストしてください。
       not_found: は見つかりませんでした。
       not_locked: はロックされていません。
       not_saved:
         one: エラーが発生したため %{resource} は保存されませんでした。
-        other: "%{count} 件のエラーが発生したため %{resource} は保存されませんでした。"
+        other: "%{count} 件のエラーが発生したため %{resource} の登録できませんでした。"
